<resources>
    <string name="app_name">App Name</string>
    <string name="facebook_app_id">2848113482180944</string>
    <string name="fb_login_protocol_scheme">fb2848113482180944</string>
    <string name="numero_de_telefono">Numero de Telefono</string>

    <string name="title_activity_menu_l_">MenuL_Activity</string>
    <string name="title_activity_menu_l">MenuL_Activity</string>
    <string name="no_tienes_una_cuenta">No tienes una cuenta?</string>
    <string name="reg_strate">Regístrate</string>
    <string name="correo_electr_nico">Correo electrónico *</string>
    <string name="sitioweb">Nombre de sitio web *</string>
    <string name="supervisor">Encargado *</string>

    <string name="contrase_a">Contraseña *</string>
    <string name="tel_fono">Teléfono</string>
    <string name="confirma_tu_contrase_a">Confirma tu contraseña *</string>
    <string name="registrarme">Registrarme</string>
    <string name="tienes_una_cuenta">Tienes una cuenta?</string>
    <string name="ingresa_aqui">Ingresa aquí</string>
    <string name="subtitulo_registro">Crea una cuenta para acceder y disfrutar de lo que tenemos preparado para ti.</string>
    <string name="titulo_registro">Empecemos!</string>
    <string name="titulo_crud">Ingreso de Sitios Webs!</string>

    <string name="nombre">Nombre *</string>
    <string name="espera_un_momento">Espera un momento...</string>
    <string name="olvid_mi_contrase_a">Olvidé mi contraseña</string>
</resources>